--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Markdown Previewer</title>
   </head>
   <body>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
